@@ -1,9 +1,11 @@
 KPVBooklet for Kindle Touch, Kindle Paperwhite, New Kindle and Kindle Voyage
 ======================================
 
-KPVBooklet is a Kindle booklet for starting KoReader
+KPVBooklet is a Kindle booklet for starting KoReader/HackedUpReader
 and updating last access and percentage finished information
 in Kindle content catalog entry of the opened document. 
+
+User can switch the open type in KUAL KPVBooklet extentions.
 
 KPVBooklet is licensed under the MIT license. See the file
 LICENSE for more details.
