@@ -7,8 +7,8 @@
     <property environment="env"/>
 
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.4"/>
-    <property name="source" value="1.4"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
 
     <!-- environment variable for the location of Amazon's jar files -->
     <target name="checkProperties">
@@ -17,15 +17,16 @@
     </target>
 
     <path id="local.classpath">
-		<pathelement location="${env.KINDLE_EBOOK}/lib/json_simple-1.1.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/lib/utilities.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/json_simple-1.1.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/utilities.jar"/>
         <pathelement location="${env.KINDLE_EBOOK}/lib/kaf.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/lib/kafui.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/lib/ReaderSDK.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/lib/ReaderContentSDK.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/booklet/Reader.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/booklet/AbstractReaderBooklet.jar"/>
-    	<pathelement location="${env.KINDLE_EBOOK}/lib/concierge-1.0.0.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/kafui.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/kxml2.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/ReaderSDK.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/ReaderContentSDK.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/booklet/Reader.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/booklet/AbstractReaderBooklet.jar"/>
+        <pathelement location="${env.KINDLE_EBOOK}/lib/concierge-1.0.0.jar"/>
     </path>
 
     <target name="compile" depends="checkProperties">
