@@ -1,3 +1,9 @@
+2017-04-07 10:49  cytown
+
+	* add txt file opened by kpvbooklet
+	* add KUAL KPVBooklet Settings feature for user controll opened by
+	KOReader/HackedUpReader/Original
+
 2016-07-17 13:53  chrox
 
 	* check new document settings path for updating progress and possibly add
